--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+    <nav>
+    <a href="index.html"> Home </a>
+    <a href="contact.html"> Contact me </a>
+    <a href="projects.html"> My projects </a>
+    </nav>
+   <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shamour Vassell</title>
 </head>
 <body>
     <h1>Hi, it's ya boy</h1>
-    <p><b>Shamour Vassell. A man of many proportions,a man of gaming strategy, a man who uses violence instead of reasonin. He can be a gentle man, but he will always be him.</b></p>
-
+    <p><b>Shamour Vassell. A man of many proportions,a man of gaming strategy, a man who uses violence instead of reasonin. He can be a gentle man, but he will always be him.</p></body>
 </body>
 </html>
