--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shamour Vassell</title>
-   
+   <h1>Contact me</h1>
 </head>
 <body>
-
+    <p><b>Use this form to contact me.</b></p>
+<form>
+   <label>Email</label>
+   
+    <input placeholder="example@gmail.com"> 
+    <br>
+<lable>Name</lable>
+<input placeholder="Name">
+<br> 
+<label>Best contact time:</label>
+<br>
+<input type="time" name="contact time">
+<br>
+<label>Comments</label>
+<br>
+<textarea name="Comments"></textarea>
+<br>
+<input type="submit">
+<input type="reset">
+<input name="send-to" value="svassell2@brooklynsteamcenter.org" hidden>
+<br>
+<input type="checkbox" name="terms">
+<label>I agree to the terms and conditions</label>
+<br>
+<p>What is the best way we can contact you</p>
+<input type="radio" name="contactTypes" value="phone">
+<lable>Phone</lable> 
+<br>
+<input type="radio" name="contact contactTypes" value="email">
+<label>Email</label>
+<br>
+<input type="radio" name="contactTypes" value="linkein">
+<label>Linkedin</label> <br>
+<input type="radio" name="contactTypes" value="alleyway">
+<label>Meeting in an alleyway :)</label> <br>
+<input type="submit">
+<input type="reset">
+</form>
 </body>
