--- a/About me.html
+++ b/About me.html
@@ -8,12 +8,13 @@
     <a href="About me.html"> About me </a>
 
     </nav>
-   <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">   
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shamour Vassell</title>
    
 </head>
 <body>
-    
+    <h1>Who is Shamour Vassell</h1>
+    <p><b></b></p>
 </body>
