--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
         <a href="index.html"> Home </a>
         <a href="contact.html"> Contact me </a>
         <a href="project.html"> Projects</a>
-        <a href="About me.html"> About me </a>
+        <a href="About me.html">About me</a>
     
         </nav>
     <meta charset="UTF-8">
@@ -16,6 +16,7 @@
 </head>
 <body>
     <h2>Projects by Shamour Vassell</h2>
-    <p><b>With the great assistance from his classmate Xavier</b></p>
+    <p><b>With the great assistance from his classmate Xavier we created our very own(not one of a kind) PC! Though Xavier did carry his classmate through the whole process Shamour was doing his best to try and help out.</b></p>
+    <img src="PC project.jpg" height="300" width="300"
 </body>
 </html>
