--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Hi, it's ya boy</h1>
     <p><b>Shamour Vassell. A man of many proportions,a man of gaming strategy, a man who uses violence instead of reasonin. He can be a gentle man, but he will always be him.</p></body>
-   <img src="A picture of Shamour and his zesty friend.jpg" height="250" width="250"
-   <img src=""
+   <img src="A picture of Shamour and his zesty friend.jpg" height="250" width="250">
+ 
     </body>
 </html>
