--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <h1>Hi, it's ya boy</h1>
     <p><b>Shamour Vassell. A man of many proportions,a man of gaming strategy, a man who uses violence instead of reasonin. He can be a gentle man, but he will always be him.</p></body>
    <img src="A picture of Shamour and his zesty friend.jpg" height="250" width="250">
+ <h1><b>Skills</b></h1>
+ <ul>
+ <p><b>IQ:120</p></b>
+ <p><b>Advanced culinary experience</b></p>
+ <p><b>Agriculture</b></p>
+ <p><b>Begginer in mechanical engineering</b></p>
+ <p><b>Construction</b></p>
+ <p><b>HTML and CSS begginer</b></p>
+ </ul>
  
     </body>
 </html>
