--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,11 @@
     <title>Shamour Vassell</title>
    <h1>Contact me</h1>
    <p class="social-media"></p>
+   <img src="gmail.png" height="90"> 
 </head>
 <body>
+
+    <hr>
     <p><b>Use this form to contact me.</b></p>
     <form
     action="https://us-central1-steam-center-app-dev.cloudfunctions.net/formToEmail"
@@ -58,3 +61,4 @@
 <input type="reset">
 </form>
 </body>
+<a href="https://github.com/ShamourV"
