--- a/project.html
+++ b/project.html
@@ -17,6 +17,7 @@
 <body>
     <h2>Projects by Shamour Vassell</h2>
     <p><b>With the great assistance from his classmate Xavier we created our very own(not one of a kind) PC! Though Xavier did carry his classmate through the whole process Shamour was doing his best to try and help out.</b></p>
-    <img src="PC project.jpg" height="300" width="300"
+    <img src="PC project.jpg" height="300" width="300">
+    <video src="Edited Project.mp4" height="300" width="250">
 </body>
 </html>
