--- a/project.html
+++ b/project.html
@@ -19,5 +19,13 @@
     <p><b>With the great assistance from his classmate Xavier we created our very own(not one of a kind) PC! Though Xavier did carry his classmate through the whole process Shamour was doing his best to try and help out.</b></p>
     <img src="PC project.jpg" height="300" width="300">
     <video src="Edited Project.mp4" height="300" width="250">
+        <source src="Edited Project.mp4" type="video/mp4">
+        <audio controls>
+            <source src="Edited Project.mp4" type="audio/mpeg">
+</audio>
+
+
+</video>
+
 </body>
 </html>
