--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <title>Shamour Vassell</title>
    <h1>Contact me</h1>
    <p class="social-media"></p>
-   <img src="gmail.png" height="90"> 
+  <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="gmail.png" height="90"></a>
 </head>
 <body>
 
@@ -25,11 +25,11 @@
     method="post"
    >
    <label>Email</label>
-
-
+   <br>
     <input placeholder="example@gmail.com"> 
     <br>
 <lable>Name</lable>
+<br>
 <input placeholder="Name">
 <br> 
 <label>Best contact time:</label>
