--- a/About me.html
+++ b/About me.html
@@ -15,6 +15,7 @@
    
 </head>
 <body>
-    <h1>About Shamour Vassell</h1>
-    <p><b></b></p>
+    <h1>About Shamour Vassell</h1><img src="Chicken_with_Yoru.jpg" height="300" width="250"> <img src="Shamours durag.jpg" height="300" width="250">
+    <h4><b>Shamour Vassell likes to make edit </b></h4>
+    
 </body>
