--- a/About me.html
+++ b/About me.html
@@ -15,7 +15,8 @@
    
 </head>
 <body>
-    <h1>About Shamour Vassell</h1><img src="Chicken_with_Yoru.jpg" height="300" width="250"> <img src="Shamours durag.jpg" height="300" width="250">
-    <h4><b>Shamour Vassell likes to make edit </b></h4>
+    <h1>About Shamour Vassell</h1><img src="Chicken_with_Yoru.jpg" height="300" width="250">
+    <h4><b>Shamour Vassell likes to make edits that can make his friends laugh. A big majority of his projects are for fun and he learns a lot by making these edits.</b></h4>
     
 </body>
+</html>
