--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,9 @@
     <title>Shamour Vassell</title>
    <h1>Contact me</h1>
    <p class="social-media"></p>
-  <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="gmail.png" height="90"></a>
+  <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="gmail.png" height="60" width="60"></a>
+  <a href="https://www.linkedin.com/in/shamour-vassell-533352268/">
+    <img class="linkdin" src="linkedin.png" height="60" width="60"></a>
 </head>
 <body>
 
