--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <nav>
-    <a href="index.html"> Home </a>
-    <a href="contact.html"> Contact me </a>
-    <a href="project.html"> Projects</a>
-    <a href="About me.html"> About me </a>
 
-    </nav>
+<head>
    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shamour Vassell</title>
-   <h1>Contact me</h1>
-   <p class="social-media"></p>
-  <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="gmail.png" height="60" width="60"></a>
-  <a href="https://www.linkedin.com/in/shamour-vassell-533352268/">
-    <img class="linkdin" src="linkedin.png" height="60" width="60"></a>
 </head>
-<body>
 
+<body>
+    <nav>
+        <a href="index.html"> Home </a>
+        <a href="contact.html"> Contact me </a>
+        <a href="project.html"> Projects</a>
+        <a href="AboutMe.html"> About me </a>
+        <a href="https://docs.google.com/document/d/1Oz3eSAfzY2-QByYW0pTaApPCb0fdUMr14E8F6xjtYgU/edit#">Resume</a>
+    </nav>
+
+    <h1>Contact me</h1>
+    <p class="social-media"></p>
+    <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="gmail.png" height="60" width="60"></a>
+    <a href="https://www.linkedin.com/in/shamour-vassell-533352268/">
+     <img class="linkdin" src="linkedin.png" height="60" width="60">
+     <a href="https://github.com/ShamourV"></a>
+    <img class="Github" src="3D git.png" height="60" width="60">
     <hr>
     <p><b>Use this form to contact me.</b></p>
     <form
@@ -63,4 +67,5 @@
 <input type="reset">
 </form>
 </body>
-<a href="https://github.com/ShamourV"
+<a href="https://github.com/ShamourV"></a>
+</html>
