--- a/project.html
+++ b/project.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <nav>
-        <a href="index.html"> Home </a>
-        <a href="contact.html"> Contact me </a>
-        <a href="project.html"> Projects</a>
-        <a href="About me.html">About me</a>
-    
-        </nav>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,17 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <a href="index.html"> Home </a>
+        <a href="contact.html"> Contact me </a>
+        <a href="project.html"> Projects</a>
+        <a href="AboutMe.html">About me</a>
+        <a href="https://docs.google.com/document/d/1Oz3eSAfzY2-QByYW0pTaApPCb0fdUMr14E8F6xjtYgU/edit#">Resume</a>
+    </nav>
     <h2>Projects by Shamour Vassell</h2>
     <p><b>With the great assistance from his classmate Xavier we created our very own(not one of a kind) PC! Though Xavier did carry his classmate through the whole process Shamour was doing his best to try and help out.</b></p>
-    <img src="PC project.jpg" height="300" width="300">
-    <video src="Edited Project.mp4" height="300" width="250">
-        <source src="Edited Project.mp4" type="video/mp4">
-        <audio controls>
-            <source src="Edited Project.mp4" type="audio/mpeg">
-</audio>
-
-
-</video>
+    <img class="ImageAlign" src="PC project.jpg" height="300" width="300">
 <br>
 <p><b>This was the first ever website that I ever made. It is based on my interest anime and being a therapist.</b></p>
 <iframe width="500" height="500" src="https://Therapy.shamourvassell.repl.co" ></iframe>
