--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <nav>
-    <a href="index.html"> Home </a>
-    <a href="contact.html"> Contact me </a>
-    <a href="project.html"> Projects</a>
-    <a href="About me.html"> About me </a>
-
-    </nav>
    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shamour Vassell</title>
-   
+    <title>Shamour Vassell</title>  
 </head>
+
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact me</a>
+        <a href="project.html">Projects</a>
+        <a href="AboutMe.html">About me</a>
+        <a href="https://docs.google.com/document/d/1Oz3eSAfzY2-QByYW0pTaApPCb0fdUMr14E8F6xjtYgU/edit#">Resume</a>
+    </nav>
+
     <h1>Little things to know about Shamour Vassell</h1>
     <p><b>Shamour Vassell. A man of many proportions,a man of gaming strategy, a man who uses violence instead of reasonin. He can be a gentle man, but he will always be him.</p></body>
    <img src="Shamours durag.jpg" height="250" width="250">
