--- a/AboutMe.html
+++ b/AboutMe.html
@@ -21,7 +21,7 @@
     <img src="rippled-flag.webp" height="300" width="500">
     <h4><b>Shamour Vassell is a Jamaican and hopes the best for his country.</b></h4>
     <img src="Dragon Ball Super.jpeg" height="300" width="500">
-    <h4><b>His favorite anime/show to watch is Dragon Ball. Shamour Vassells father had introduced it to him when he was 5 yearas old and they have been watching it together ever since. He has played many of the Dragon Ball games and continues to have a huge interest in it all.</b></h4>
+    <h4><b>His favorite anime/show to watch is Dragon Ball. Shamour Vassells father had introduced it to him when he was 5 yearas old and they have been watching it together ever since. He has played many of the Dragon Ball games and continues to have a huge interest in it all.His favoirte character is the protagonist son Son Gohan.</b></h4>
 
 </body>
 </html>
