--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
  <p><b>Construction</b></p>
  <p><b>HTML and CSS begginer</b></p>
  <p><b>CAPCUT user</b></p>
+ <p><b>Novice in Therapy</b></p>
  </ul>
  
     </body>
