--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
 
     <h1>Little things to know about Shamour Vassell</h1>
-    <p><b>Shamour Vassell. A man of many proportions,a man of gaming strategy, a man who uses violence instead of reasonin. He can be a gentle man, but he will always be him.</p></body>
+    <p><b>Shamour Vassell. A man of many proportions,a man of gaming strategy, a man who uses violence instead of reasoning. He can be a gentle man, but he will always be him.</p></body>
    <img src="Shamours durag.jpg" height="250" width="250">
  <h1><b>Skills</b></h1>
  <ul>
