--- a/AboutMe.html
+++ b/AboutMe.html
@@ -14,14 +14,17 @@
         <a href="project.html"> Projects</a>
         <a href="AboutMe.html"> About me </a>
         <a href="https://docs.google.com/document/d/1Oz3eSAfzY2-QByYW0pTaApPCb0fdUMr14E8F6xjtYgU/edit#">Resume</a>
+        <a href="New_achievements.html"> NG+ </a>
     </nav>
     
     <h1>About Shamour Vassell</h1><img src="Chicken_with_Yoru.jpg" height="300" width="250">
-    <h4><b>Shamour Vassell likes to make edits that can make his friends laugh. A big majority of his projects are for fun and he learns a lot by making these edits.</b></h4>
+    <h4><b>I like to make edits that can make his friends laugh. A big majority of my projects are for fun and he learns a lot by making these edits.</b></h4>
     <img src="rippled-flag.webp" height="300" width="500">
-    <h4><b>Shamour Vassell is a Jamaican and hopes the best for his country.</b></h4>
+    <h4><b>I am a Jamaican and hopes the best for my country.</b></h4>
     <img src="Dragon Ball Super.jpeg" height="300" width="500">
-    <h4><b>His favorite anime/show to watch is Dragon Ball. Shamour Vassells father had introduced it to him when he was 5 yearas old and they have been watching it together ever since. He has played many of the Dragon Ball games and continues to have a huge interest in it all.His favoirte character is the protagonist son Son Gohan.</b></h4>
-
+    <h4><b>My favorite anime/show to watch is Dragon Ball. Shamour Vassells father had introduced it to me when I was 5 yearas old and they have been watching it together ever since. I have played many of the Dragon Ball games and continues to have a huge interest in it all. My favoirte character is the protagonist son Son Gohan.</b></h4>
+    <h4><b>I learned how to become a therapist because my friends always seemed to be in a lot of turmoil.</b></h4>
+    <h4><b>I wanted my friends to feel better just so they would play some games with me but after a while I actually started to care and help them with their problems</b></h4>
+    <h4><b>I forced myself to save a relationship five times over the summer of 2023</b></h4>
 </body>
 </html>
