--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
         <a href="project.html"> Projects</a>
         <a href="AboutMe.html"> About me </a>
         <a href="https://docs.google.com/document/d/1Oz3eSAfzY2-QByYW0pTaApPCb0fdUMr14E8F6xjtYgU/edit#">Resume</a>
+        <a href="New_achievements.html"> NG+ </a>
     </nav>
 
     <h1>Contact me</h1>
