--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="project.html">Projects</a>
         <a href="AboutMe.html">About me</a>
         <a href="https://docs.google.com/document/d/1Oz3eSAfzY2-QByYW0pTaApPCb0fdUMr14E8F6xjtYgU/edit#">Resume</a>
+        <a href="New_achievements.html"> NG+ </a>
     </nav>
 
     <h1>Little things to know about Shamour Vassell</h1>
@@ -21,14 +22,16 @@
    <img src="Shamours durag.jpg" height="250" width="250">
  <h1><b>Skills</b></h1>
  <ul>
- <p><b>Gaming IQ:120</p></b>
+ <p><b>Gaming IQ=170</p></b>
  <p><b>Advanced culinary experience</b></p>
- <p><b>Agriculture</b></p>
- <p><b>Begginer in mechanical engineering</b></p>
- <p><b>Construction</b></p>
- <p><b>HTML and CSS begginer</b></p>
- <p><b>CAPCUT user</b></p>
+ <p><b>Agricultural</b></p>
+ <p><b>Intermediate in mechanical engineering</b></p>
+ <p><b>Construction Intermediate</b></p>
+ <p><b>HTML and CSS Intermediate</b></p>
+ <p><b>CAPCUT novice</b></p>
  <p><b>Novice in Therapy</b></p>
+ <p><b>Improved Therapy over the summer</b></p>
+ <p><b>Cybersecurity Novice</b></p>
  </ul>
  
     </body>
