--- a/project.html
+++ b/project.html
@@ -14,6 +14,7 @@
         <a href="project.html"> Projects</a>
         <a href="AboutMe.html">About me</a>
         <a href="https://docs.google.com/document/d/1Oz3eSAfzY2-QByYW0pTaApPCb0fdUMr14E8F6xjtYgU/edit#">Resume</a>
+        <a href="New_achievements.html"> NG+ </a>
     </nav>
     <h2>Projects by Shamour Vassell</h2>
     <p><b>With the great assistance from his classmate Xavier we created our very own(not one of a kind) PC! Though Xavier did carry his classmate through the whole process Shamour was doing his best to try and help out.</b></p>
@@ -21,5 +22,6 @@
 <br>
 <p><b>This was the first ever website that I ever made. It is based on my interest anime and being a therapist.</b></p>
 <iframe width="500" height="500" src="https://Therapy.shamourvassell.repl.co" ></iframe>
+<p><b>I had a project over the summer during my apprenticeship. I had to search for someone a 65 year old scammer. It took me and my partner carlos a day and a half to get all the information we needed to find his family and accomplice including where he lives </b></p>
 </body>
 </html>
