--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,7 @@
 <input name="send-to" value="svassell2@brooklynsteamcenter.org" hidden>
 <br>
 <input type="checkbox" name="terms">
+<p>You will only contact me for work or academic related purposes.</p>
 <label>I agree to the terms and conditions</label>
 <br>
 <p>What is the best way we can contact you</p>
